<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".VIEW.FRAGMENTS.AUTHENTICATION.RegisterFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/register" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="25dp">

        <com.google.android.material.textview.MaterialTextView

            android:id="@+id/register_error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:paddingStart="7dp"
            android:textColor="@color/red"
            android:textSize="15sp"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/ic_baseline_error_24"
            tools:ignore="RtlSymmetry"
            tools:text="This is an error message"
            tools:visibility="visible" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/register_username"
            style="@style/MyEditTextStyleForAuthScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingStart="7dp"
            android:singleLine="true"
            android:textSize="20sp"

            tools:ignore="RtlSymmetry" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/register_email"
            style="@style/MyEditTextStyleForAuthScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:paddingStart="7dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="20sp"

            tools:ignore="RtlSymmetry" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/register_password"
            style="@style/MyEditTextStyleForAuthScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"

            android:paddingStart="7dp"
            android:singleLine="true"
            android:textSize="20sp"

            tools:ignore="RtlSymmetry" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_signup"
            style="@style/MyButtonStyleForAuthScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/register_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />


</RelativeLayout>